--- a/app/config/simplebus/command.project.yml
+++ b/app/config/simplebus/command.project.yml
@@ -3,14 +3,14 @@ services:
     command.project.create:
         class: eTraxis\SimpleBus\Projects\Handler\CreateProjectCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Projects\CreateProjectCommand }]
-        arguments: [ "@logger", "@validator", "@doctrine" ]
+        arguments: [ "@validator", "@doctrine" ]
 
     command.project.update:
         class: eTraxis\SimpleBus\Projects\Handler\UpdateProjectCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Projects\UpdateProjectCommand }]
-        arguments: [ "@logger", "@validator", "@doctrine" ]
+        arguments: [ "@validator", "@doctrine" ]
 
     command.project.delete:
         class: eTraxis\SimpleBus\Projects\Handler\DeleteProjectCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Projects\DeleteProjectCommand }]
-        arguments: [ "@logger", "@doctrine", "@security.authorization_checker" ]
+        arguments: [ "@doctrine", "@security.authorization_checker" ]
