--- a/app/config/simplebus/command.group.yml
+++ b/app/config/simplebus/command.group.yml
@@ -3,24 +3,24 @@ services:
     command.group.create:
         class: eTraxis\SimpleBus\Groups\Handler\CreateGroupCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\CreateGroupCommand }]
-        arguments: [ "@logger", "@validator", "@doctrine" ]
+        arguments: [ "@validator", "@doctrine" ]
 
     command.group.update:
         class: eTraxis\SimpleBus\Groups\Handler\UpdateGroupCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\UpdateGroupCommand }]
-        arguments: [ "@logger", "@validator", "@doctrine" ]
+        arguments: [ "@validator", "@doctrine" ]
 
     command.group.delete:
         class: eTraxis\SimpleBus\Groups\Handler\DeleteGroupCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\DeleteGroupCommand }]
-        arguments: [ "@logger", "@doctrine" ]
+        arguments: [ "@doctrine" ]
 
     command.groups.add_users:
         class: eTraxis\SimpleBus\Groups\Handler\AddRemoveUsersCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\AddUsersCommand }]
-        arguments: [ "@logger", "@doctrine" ]
+        arguments: [ "@doctrine" ]
 
     command.groups.remove_users:
         class: eTraxis\SimpleBus\Groups\Handler\AddRemoveUsersCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\RemoveUsersCommand }]
-        arguments: [ "@logger", "@doctrine" ]
+        arguments: [ "@doctrine" ]
