--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "sensio/generator-bundle"              : "^3.0",
         "symfony/phpunit-bridge"               : "^3.0",
         "phpunit/phpunit"                      : "^4.1",
+        "leedavis81/altr-ego"                  : "^1.0",
         "fabpot/php-cs-fixer"                  : "^1.11"
     },
     "autoload": {
