--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "simple-bus/symfony-bridge"            : "^4.1",
         "simple-bus/doctrine-orm-bridge"       : "^4.0",
         "ramsey/uuid"                          : "^3.0",
+        "arodygin/php-dictionary"              : "^1.0",
         "arodygin/simplebus-bundle"            : "^1.0",
         "arodygin/datatables-bundle"           : "^1.2"
     },
