--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-    - 5.6
     - 7.0
 
 env:
@@ -9,11 +8,6 @@ env:
     - DB=pgsql
 
 sudo: false
-
-addons:
-    apt:
-        packages:
-        - php5-ldap
 
 before_install:
     - echo 'extension = ldap.so'                >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
@@ -30,7 +24,6 @@ before_script:
     - ./bin/console --env=test --no-interaction doctrine:fixtures:load --fixtures=src/AppBundle/DataFixtures/Tests
 
 script:
-    - if [[ "$(phpenv version-name)" != "7.0" ]]; then phpunit; fi
-    - if [[ "$(phpenv version-name)" == "7.0" ]]; then phpunit --coverage-clover=coverage.clover; fi
-    - if [[ "$(phpenv version-name)" == "7.0" ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-    - if [[ "$(phpenv version-name)" == "7.0" ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+    - phpunit --coverage-clover=coverage.clover
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
