--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -31,6 +31,7 @@ services:
 
     ldap:
         class: eTraxis\Service\Ldap\LdapService
+        public: false
         arguments:
             - "@logger"
             - "%ldap_host%"
