--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "sensio/distribution-bundle"           : "^5.0",
         "sensio/framework-extra-bundle"        : "^3.0.2",
         "incenteev/composer-parameter-handler" : "^2.0",
+        "twig/extensions"                      : "^1.3",
         "simple-bus/symfony-bridge"            : "^4.1",
         "simple-bus/doctrine-orm-bridge"       : "^4.0",
         "ramsey/uuid"                          : "^3.0",
