--- a/app/config/travis/parameters.mysql.yml
+++ b/app/config/travis/parameters.mysql.yml
@@ -3,7 +3,7 @@ parameters:
     database_driver:        pdo_mysql
     database_host:          127.0.0.1
     database_port:          ~
-    database_name:          xe
+    database_name:          etraxis
     database_user:          root
     database_password:      ~
     database_charset:       UTF8
