--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,8 @@
     "require-dev": {
         "sensio/generator-bundle"              : "^3.0",
         "symfony/phpunit-bridge"               : "^3.0",
-        "leedavis81/altr-ego"                  : "^1.0",
-        "fabpot/php-cs-fixer"                  : "^1.11"
+        "friendsofphp/php-cs-fixer"            : "^1.11",
+        "leedavis81/altr-ego"                  : "^1.0"
     },
     "autoload": {
         "psr-4": {
