Custom "INTDIV" SQL function

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,6 +68,7 @@ doctrine:
         dql:
             string_functions:
                 EPOCH_DATE: eTraxis\Doctrine\EpochDateFunction
+                INTDIV:     eTraxis\Doctrine\IntDivFunction
         filters:
             filter.fields:
                 class:   eTraxis\Doctrine\FieldsFilter
