--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,9 @@
 checks:
-    php:
-        code_rating: true
-        duplication: false
+    php: true
 
 tools:
     external_code_coverage:
-        timeout: 900
+        timeout: 1200
         runs: 2
 
 filter:
