Refactor security classes

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,7 @@
 security:
 
     encoders:
-        eTraxis\Entity\CurrentUser:
+        eTraxis\Security\CurrentUser:
             id: etraxis.encoder
 
     providers:
