--- a/app/config/services/etraxis.yml
+++ b/app/config/services/etraxis.yml
@@ -1,6 +1,9 @@
 # Keep services sorted alphabetically.
 services:
 
+    etraxis.bbcode:
+        class: eTraxis\Service\BBCode\BBCodeService
+
     etraxis.export:
         class: eTraxis\Service\Export\ExportService
 
