--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "normalize.css": "4.2.0",
+        "fontawesome": "4.6.3",
         "unsemantic": "1.1.3",
         "jquery": "2.2.4",
         "jquery.ui": "1.11.4",
