--- a/app/config/services/datatables.yml
+++ b/app/config/services/datatables.yml
@@ -7,6 +7,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - "@security.token_storage"
+            - "@cache.app"
             - "@etraxis.bbcode"
             - "@etraxis.repository.templates"
 
