Records cache service

--- a/app/config/services/datatables.yml
+++ b/app/config/services/datatables.yml
@@ -7,7 +7,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - "@security.token_storage"
-            - "@cache.app"
+            - "@etraxis.records_cache"
             - "@etraxis.bbcode"
             - "@etraxis.repository.templates"
 
