--- a/app/config/simplebus/command.record.yml
+++ b/app/config/simplebus/command.record.yml
@@ -3,9 +3,9 @@ services:
     command.records.mark_as_read:
         class: eTraxis\SimpleBus\Records\Handler\MarkRecordsAsReadCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Records\MarkRecordsAsReadCommand }]
-        arguments: [ "@doctrine.orm.entity_manager" ]
+        arguments: [ "@doctrine.orm.entity_manager", "@etraxis.records_cache" ]
 
     command.records.mark_as_unread:
         class: eTraxis\SimpleBus\Records\Handler\MarkRecordsAsUnreadCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Records\MarkRecordsAsUnreadCommand }]
-        arguments: [ "@doctrine.orm.entity_manager" ]
+        arguments: [ "@doctrine.orm.entity_manager", "@etraxis.records_cache" ]
