--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,9 @@
         "unsemantic": "1.1.3",
         "jquery": "3.1.0",
         "jquery.ui": "1.12.0",
-        "blockui": "2.70",
-        "jquery-form": "3.51",
         "datatables": "1.10.12",
-        "datatables-plugins": "1.10.12"
+        "datatables-plugins": "1.10.12",
+        "blockui": "2.70",
+        "jquery-form": "3.51"
     }
 }
